--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="https://www.instagram.com/rajputabhijay1/" class="icon brands linkicons"><img src="/images/instagram.png" alt=""></a></li>
-							<li><a href="#contact"  class="icon brands linkicons"><img src="/images/Contact3.png" alt=""></a></li>
-							<li><a href="https://www.facebook.com/" class="icon brands linkicons"><img src="/images/facebook.png" alt=""></a></li>
-							<li><a href="linkedin.com/in/abhijay-rajput-a14225192/" class="icon brands linkicons"><img src="/images/linkedin.png" alt=""></a></li>
-							<li><a href="https://www.behance.net/"   class="icon brands linkicons"><img src="/images/behance.png" alt=""></a></li>
+							<li><a href="https://www.instagram.com/rajputabhijay1/" class="icon brands linkicons"><img src="images/instagram.png" alt=""></a></li>
+							<li><a href="#contact"  class="icon brands linkicons"><img src="images/Contact3.png" alt=""></a></li>
+							<li><a href="https://www.facebook.com/" class="icon brands linkicons"><img src="images/facebook.png" alt=""></a></li>
+							<li><a href="linkedin.com/in/abhijay-rajput-a14225192/" class="icon brands linkicons"><img src="images/linkedin.png" alt=""></a></li>
+							<li><a href="https://www.behance.net/"   class="icon brands linkicons"><img src="images/behance.png" alt=""></a></li>
 						</ul>
 
 				</div>
