--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 									  <source src="video/AdobeXD.mp4">
 									Your browser does not support the video tag.
 								</video>
-								 <iframe src="PDF/illustrator.pdf" width="100%" height="700px" style="overflow-x: hidden;">
+								 <iframe src="PDF/Illustrator.pdf" width="100%" height="700px" style="overflow-x: hidden;">
     							</iframe>
 
 
@@ -525,3 +525,4 @@
 
 	</body>
 </html>
+
